--- a/Pages/installation.html
+++ b/Pages/installation.html
@@ -17,7 +17,7 @@
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/8ae592a67f.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../CSS/sidebar.css">
+    <link rel="stylesheet" href="../CSS/installation.css">
     <link rel="stylesheet" href="../CSS/queries.css">
     <link rel="stylesheet" href="../CSS/textcontent.css">
     <link rel="stylesheet" href="../CSS/style.css">
@@ -39,25 +39,14 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto ">
-                        <li class="nav-item">
-                            <a class="nav-link active " aria-current="page" href="installation.html">Installation</a>
-                        </li>
+                        <a href="../Pages/index.html" class="home" style="margin-right:1rem;"><i class=" fa-solid
+                                                fa-house"></i>Home</a>
 
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Tutorials
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">PHP Syntax</a></li>
-                                <li><a class="dropdown-item" href="#">PHP Variables</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </li>
-                        <a class="btn login-btn " href="login.php">login</a>
+                        <form action="" class="d-flex">
+                            <input type="text" style="margin-right:1rem;">
+                            <button class="btn btn-search" type="submit">Search</button>
+                        </form>
+
 
 
                     </ul>
