--- a/Pages/index.html
+++ b/Pages/index.html
@@ -91,7 +91,7 @@
 
 
 
-  <section class="featured">
+  <section class="featured ">
     <div class="container">
 
       <div class="logos row text-center">
@@ -114,7 +114,7 @@
     </div>
 
   </section>
-  <section class="advantages mt-5">
+  <section class="advantages mt-5 ">
     <div class="container ">
       <h2 class="text-center advantage-heading">Advantages of using PHP</h2>
       <div class=" row advantage-card">
@@ -245,72 +245,21 @@
 
   </section>
 
-  <section class="faqs">
-    <div class="container">
-      <h2>FAQS</h2>
-      <div class="accordion accordion-flush" id="accordionFlushExample">
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="flush-headingOne">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-              data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-              Accordion Item #1
-            </button>
-          </h2>
-          <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
-            data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
-              <code>.accordion-flush</code> class. This is the first item's accordion body.
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="flush-headingTwo">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-              data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-              Accordion Item #2
-            </button>
-          </h2>
-          <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
-            data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
-              <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being
-              filled
-              with some actual content.
-            </div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="flush-headingThree">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-              data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-              Accordion Item #3
-            </button>
-          </h2>
-          <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
-            data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
-              <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting
-              happening
-              here in terms of content, but just filling up the space to make it look, at least at first glance, a bit
-              more
-              representative of how this would look in a real-world application.
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+
   <section class="footer container-fluid">
     <div class="container footer-div">
       <div>
         <h4 class="footer-head">PHP Snippets.</h4>
         <p>51 Fulltank St. Los Angeles,Philippines</p>
         <p>Contact us:+63 81800000</p>
+        <p>Copyright @ 2022</p>
       </div>
       <div>
         <h4 class="footer-ref">References</h4>
-        <p>W3Schools</p>
-        <p>PHP.net</p>
+
+        <a href="https://www.w3schools.com/php/php_constants.asp" style="display:block;color:#495057;">
+          W3Schools</a>
+        <a href="https://www.php.net/" style="display:block;color:#495057;">PHP.Net</a>
       </div>
     </div>
   </section>
